breaking blocks in the game

--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -196,76 +196,6 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-    </div>
-    <div class="row">
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
         <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -341,6 +271,15 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -351,18 +290,9 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="empty"></div>
+        <div class="empty"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -434,8 +364,8 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="empty"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -485,77 +415,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-    </div>
-    <div class="row">
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -627,8 +487,78 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
+        <div class="empty"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+    </div>
+    <div class="row">
+        <div class="block"></div>
+        <div class="empty"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="empty"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="empty"></div>
+        <div class="empty"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -681,6 +611,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -688,6 +619,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -742,9 +674,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
     </div>
     <div class="row">
@@ -752,6 +682,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -793,6 +724,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -809,9 +741,7 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="empty"></div>
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
